@@ -9,6 +9,7 @@ INCLUDES =					\
 	-I$(top_builddir)/libgnomevfs		\
 	$(OAF_CFLAGS)				\
 	$(GNOME_INCLUDEDIR)			\
+	$(WERROR)				\
 	$(NULL)
 
 CPPFLAGS =					\
