@@ -1,5 +1,11 @@
 2000-08-31  Martin Baulig  <baulig@suse.de>
 
+	* configure.in: Don't put -Werror into CFLAGS but into WERROR
+	and AC_SUBST it. Some configure checks don't work with -Werror.
+	* */Makefile.am (INCLUDES): Add $(WERROR).
+
+2000-08-31  Martin Baulig  <baulig@suse.de>
+
 	* libgnomevfs/gnome-vfs-private-utils.c
 	(gnome_vfs_i18n_get_language_list): New function. This calls
 	gnome_i18n_get_language list for the GNOME 1.2.x platform and
